# everybodycodes

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
data/quest-01/: part01.txt  part02.txt  part03.txt
src/everybodycodes/: __init__.py
src/everybodycodes/quest-01/: part02.py  part03.py
src/everybodycodes/quest_01/: part01.py  part02.py  part03.py
