[project]
name = "everybodycodes"
version = "0.1.0"
description = "Scripts for everybody.codes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.3",
]

[project.scripts]
everybodycodes = "everybodycodes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
python_files = "*.py"
